feat: add example for mint and add transfer api
