# controller/respond/mrc20_op_respond.go
@@ -1,14 +1,15 @@
 package respond
 
 type Mrc20MintPreResp struct {
-	OrderId          string `json:"orderId"`
-	TotalFee         int64  `json:"totalFee"`
-	RevealFee        int64  `json:"revealFee"`
-	RevealAddress    string `json:"revealAddress"`
-	ServiceFee       int64  `json:"serviceFee"`
-	ServiceAddress   string `json:"serviceAddress"`
-	RevealPrePsbtRaw string `json:"revealPrePsbtRaw"`
-	RevealInputIndex int64  `json:"revealInputIndex"`
+	OrderId          string      `json:"orderId"`
+	TotalFee         int64       `json:"totalFee"`
+	RevealFee        int64       `json:"revealFee"`
+	RevealAddress    string      `json:"revealAddress"`
+	ServiceFee       int64       `json:"serviceFee"`
+	ServiceAddress   string      `json:"serviceAddress"`
+	RevealPrePsbtRaw string      `json:"revealPrePsbtRaw"`
+	RevealInputIndex int64       `json:"revealInputIndex"`
+	Extra            interface{} `json:"extra"`
 }
 
 type Mrc20MintCommitResp struct {
@@ -18,14 +19,15 @@ type Mrc20MintCommitResp struct {
 }
 
 type Mrc20TransferPreResp struct {
-	OrderId          string `json:"orderId"`
-	TotalFee         int64  `json:"totalFee"`
-	RevealFee        int64  `json:"revealFee"`
-	RevealAddress    string `json:"revealAddress"`
-	ServiceFee       int64  `json:"serviceFee"`
-	ServiceAddress   string `json:"serviceAddress"`
-	RevealPrePsbtRaw string `json:"revealPrePsbtRaw"`
-	RevealInputIndex int64  `json:"revealInputIndex"`
+	OrderId          string      `json:"orderId"`
+	TotalFee         int64       `json:"totalFee"`
+	RevealFee        int64       `json:"revealFee"`
+	RevealAddress    string      `json:"revealAddress"`
+	ServiceFee       int64       `json:"serviceFee"`
+	ServiceAddress   string      `json:"serviceAddress"`
+	RevealPrePsbtRaw string      `json:"revealPrePsbtRaw"`
+	RevealInputIndex int64       `json:"revealInputIndex"`
+	Extra            interface{} `json:"extra"`
 }
 
 type Mrc20TransferCommitResp struct {
